feat(java): downgraded to Java 21