@@ -7,6 +7,18 @@ plugins {
 group = 'org.silicon'
 version = '1.0.1-SNAPSHOT'
 
+allprojects {
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs.add('--enable-preview')
+    }
+    tasks.withType(Test).configureEach {
+        jvmArgs('--enable-preview')
+    }
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs('--enable-preview')
+    }
+}
+
 subprojects {
     version = rootProject.version
     group = rootProject.group
@@ -64,11 +76,11 @@ subprojects {
 
     java {
         toolchain {
-            languageVersion.set(JavaLanguageVersion.of(22))
+            languageVersion.set(JavaLanguageVersion.of(21))
         }
 
-        sourceCompatibility = JavaVersion.VERSION_22
-        targetCompatibility = JavaVersion.VERSION_22
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 }
 
